@@ -7247,7 +7247,6 @@ static FUNCTION(fun_height)
     UNUSED_PARAMETER(ncargs);
 
     long nHeight = 24;
-    dbref target = NOTHING;
     if (is_rational(fargs[0]))
     {
         SOCKET s = mux_atol(fargs[0]);
@@ -7256,7 +7255,7 @@ static FUNCTION(fun_height)
         {
             if (d->descriptor == s)
             {
-                target = d->player;
+                nHeight = d->height;
                 break;
             }
         }
@@ -7264,26 +7263,20 @@ static FUNCTION(fun_height)
     else
     {
         char *pTargetName = fargs[0];
-        if (*pTargetName == '*')
+        if ('*' == *pTargetName)
         {
             pTargetName++;
         }
-        target = lookup_player(executor, pTargetName, true);
-        if (!Good_obj(target))
+        dbref target = lookup_player(executor, pTargetName, true);
+        if (Good_obj(target))
         {
-            target = NOTHING;
+            if (  executor == target
+               || See_All(executor))
+            {
+                nHeight = fetch_height(target);
+            }
         }
     }
-
-    if (NOTHING != target)
-    {
-        if (  executor == target
-           || See_All(executor))
-        {
-            nHeight = fetch_height(target);
-        }
-    }
-
     safe_ltoa(nHeight, buff, bufc);
 }
 
@@ -7297,8 +7290,7 @@ static FUNCTION(fun_width)
     UNUSED_PARAMETER(cargs);
     UNUSED_PARAMETER(ncargs);
 
-    long nWidth = 78;
-    dbref target = NOTHING;
+    long nWidth = 24;
     if (is_rational(fargs[0]))
     {
         SOCKET s = mux_atol(fargs[0]);
@@ -7307,7 +7299,7 @@ static FUNCTION(fun_width)
         {
             if (d->descriptor == s)
             {
-                target = d->player;
+                nWidth = d->width;
                 break;
             }
         }
@@ -7315,26 +7307,20 @@ static FUNCTION(fun_width)
     else
     {
         char *pTargetName = fargs[0];
-        if (*pTargetName == '*')
+        if ('*' == *pTargetName)
         {
             pTargetName++;
         }
-        target = lookup_player(executor, pTargetName, true);
-        if (!Good_obj(target))
+        dbref target = lookup_player(executor, pTargetName, true);
+        if (Good_obj(target))
         {
-            target = NOTHING;
+            if (  executor == target
+               || See_All(executor))
+            {
+                nWidth = fetch_width(target);
+            }
         }
     }
-
-    if (NOTHING != target)
-    {
-        if (  executor == target
-           || See_All(executor))
-        {
-            nWidth = fetch_width(target);
-        }
-    }
-
     safe_ltoa(nWidth, buff, bufc);
 }
 
